--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "devDependencies": {
-    "mdx-deck": "^4.1.1"
+    "mdx-deck": "^4.1.1",
+    "serve": "^11.3.0"
   },
   "scripts": {
-	"build": "mdx-deck build presentation.mdx",
+    "build": "mdx-deck build presentation.mdx",
+    "serve": "serve public",
     "start": "mdx-deck presentation.mdx"
   }
 }
